RESOLVED FIXED130991
Crashes in PageConsole::addMessage
https://bugs.webkit.org/show_bug.cgi?id=130991
Summary Crashes in PageConsole::addMessage
Alexey Proskuryakov
Reported 2014-03-31 15:53:05 PDT
We are seeing crashes in PageConsole::addMessage when "this" object is null. <rdar://problem/14795232>
Attachments
proposed fix (4.64 KB, patch)
2014-03-31 15:57 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2014-03-31 15:57:29 PDT
Created attachment 228212 [details] proposed fix
Geoffrey Garen
Comment 2 2014-03-31 16:13:41 PDT
Comment on attachment 228212 [details] proposed fix r=me
WebKit Commit Bot
Comment 3 2014-03-31 17:19:43 PDT
Comment on attachment 228212 [details] proposed fix Clearing flags on attachment: 228212 Committed r166551: <http://trac.webkit.org/changeset/166551>
WebKit Commit Bot
Comment 4 2014-03-31 17:19:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.