Crashes in PageConsole::addMessage https://bugs.webkit.org/show_bug.cgi?id=130991 <rdar://problem/14795232>

Reviewed by Geoffrey Garen.

Source/WebCore:

Test: http/tests/misc/detached-frame-console.html

* page/DOMWindow.cpp: (WebCore::DOMWindow::printErrorMessage): Added a null check.
It's legitimate for this to be called for a window that is not currently displayed
in a frame.

LayoutTests:

* http/tests/misc/detached-frame-console-expected.txt: Added.
* http/tests/misc/detached-frame-console.html: Added.
* http/tests/misc/resources/detached-frame-console-subframe.html: Added.


Canonical link: https://commits.webkit.org/149061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166551 268f45cc-cd09-0410-ab3c-d52691b4dbfc